<resources>
    <string name="app_name">Pomodoros</string>
    <string name="task_name">Task Name</string>
    <string name="task_name_title">Name</string>
    <string name="task_name_hint">Task Name</string>
    <string name="duration_title">Duration</string>
    <string name="pomodoro_title">Pomodoro</string>
    <string name="short_break_title">Short Break</string>
    <string name="long_break_title">Long Break</string>
    <string name="cycles_title">Cycles</string>
    <string name="alarm_title">Alarm</string>
    <string name="background_title">Background</string>
    <string name="required_field">Required Field</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="permissions">Permissions</string>
    <string name="distraction_free_mode">Distraction-Free Mode</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="background_volume">Background Volume</string>
    <string name="settings">Settings</string>
    <string name="pomodoro_alarm">Pomodoro Alarm</string>
    <string name="short_break_alarm">Short Break Alarm</string>
    <string name="long_break_alarm">Long Break Alarm</string>
    <string name="pomodoro_background">Pomodoro Background</string>
    <string name="short_break_background">Short Break Background</string>
    <string name="long_break_background">Long Break Background</string>
    <string name="task_color">Color</string>
    <string name="all_permissions_granted">All permissions granted</string>
    <string name="some_permissions_are_missing">Some permissions are missing</string>
    <string name="add_task">Add Task</string>
    <string name="manage_permissions_description">Manage app permissions</string>
    <string name="play_preview">Play preview</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="close_menu">Close Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_tasks">My Tasks</string>

    <string-array name="alarm_sound_names">
        <item>Vibration</item>
        <item>Alarm 1</item>
        <item>Alarm 2</item>
        <item>Alarm 3</item>
        <item>Alarm 4</item>
        <item>Alarm 5</item>
        <item>Alarm 6</item>
        <item>Applause</item>
        <item>Bell</item>
        <item>Splash</item>
        <item>I\'m fine</item>
        <item>Knock Knock</item>
    </string-array>

    <string-array name="background_sound_names">
        <item>None</item>
        <item>Keyboard</item>
        <item>Piano</item>
        <item>Meditation</item>
        <item>Fire</item>
        <item>Crystal</item>
        <item>Rain</item>
        <item>Wind</item>
        <item>Bubbles</item>
        <item>Coffee Shop</item>
        <item>Steps</item>
    </string-array>
</resources>